refactor(aop): 优化用户切面和服务代码
- 修改UserAop类中环绕通知变量名以提高代码可读性
- 为UserAop类中的通知方法添加详细的JavaDoc注释
- 调整CorsConfig配置，使用CorsFilter替代CorsWebFilter并支持允许跨域源模式
- 在CacheConfig中添加注释说明自定义Redis缓存配置方法
- 优化application.properties文件注释格式规范
- 在UserService类中添加示例测试方法hello，包含参数和返回值说明

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.dynamic.datasource.mysql.username=root
 spring.datasource.dynamic.datasource.mysql.password=123
 spring.datasource.dynamic.datasource.mysql.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.dynamic.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
-# postgresql
+# PostgreSQL
 spring.datasource.dynamic.datasource.postgresql.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.dynamic.datasource.postgresql.username=postgres
 spring.datasource.dynamic.datasource.postgresql.password=123
